fix gap for icons

--- a/styles/main.css
+++ b/styles/main.css
@@ -60,6 +60,7 @@ img:hover {
   flex: 1 1 200px;
   display: flex;
   flex-direction: column;
+  gap: 24px;
 }
 
 #information {
